Bug 471140 - Xwayland Video Bridge stopped working on Arch
Summary: Xwayland Video Bridge stopped working on Arch
Status: RESOLVED FIXED
Alias: None
Product: XWaylandVideoBridge
Classification: Applications
Component: general (other bugs)
Version First Reported In: unspecified
Platform: Arch Linux Linux
: NOR major
Target Milestone: ---
Assignee: Plasma Bugs List
URL:
Keywords:
: 471244 (view as bug list)
Depends on:
Blocks:
 
Reported: 2023-06-17 08:35 UTC by Jannis Göing
Modified: 2023-12-24 13:56 UTC (History)
8 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments
Screenshot of Error Message (47.24 KB, image/png)
2023-06-17 08:35 UTC, Jannis Göing
Details
Screenshot of Window Behaviour (14.92 KB, image/png)
2023-06-17 08:37 UTC, Jannis Göing
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Jannis Göing 2023-06-17 08:35:42 UTC
Created attachment 159732 [details]
Screenshot of Error Message

SUMMARY
***
NOTE: If you are reporting a crash, please try to attach a backtrace with debug symbols.
See https://community.kde.org/Guidelines_and_HOWTOs/Debugging/How_to_create_useful_crash_reports
***


STEPS TO REPRODUCE
1. Install Xwayland Videobridge on Arch (from Source or AUR)
2. Launch Xwayland Videobridge

OBSERVED RESULT

On Nvidia: Error Message "libEGL warning: egl: failed to create dri2 screen"
On AMD: No Output in Console

On Both:
The Window is visible and shows up in Taskbar. No Selection Window is shown when trying to share screen (e.g. in Discord). When selected for sharing, only a white screen is streamed.

EXPECTED RESULT

Window should be hidden, a selection should pop up when starting to stream, stream should show the actual content of what's streamed

SOFTWARE/OS VERSIONS
Linux/KDE Plasma: Arch Linux Lernel 6.3.8-arch1-1
(available in About System)
KDE Plasma Version: 5.27.5
KDE Frameworks Version: 5.107.0
Qt Version: 5.15.10

ADDITIONAL INFORMATION
It did work before. I tested it on two Systems, one with an AMD RX 6500XT and one with an NVIDIA Geforce RTX 3080
Comment 1 Jannis Göing 2023-06-17 08:37:05 UTC
Created attachment 159733 [details]
Screenshot of Window Behaviour
Comment 2 David Edmundson 2023-06-17 10:42:04 UTC
Can you confirm if screen sharing in other applications work? 

this page in firefox is a good test: https://www.webrtc-experiment.com/Pluginfree-Screen-Sharing/#8149214815066223
Comment 3 David Edmundson 2023-06-17 10:44:05 UTC
Edit, it's broken for me too
Comment 4 David Edmundson 2023-06-17 11:02:48 UTC
My released flatpak still works as intended. 

Checking out xwaylandvideo bridge at the same commit as the released flatpak does not work.
Comment 5 Daniel Skorupa 2023-06-17 17:13:49 UTC
It stopped working for me too today, debian 12. I've installed it yesterday and it worked. It's exatly the same as you describe - only white rectandle and it doesn't ask which window / screen do I want to share.
Comment 6 Egor Kuznetsov 2023-06-19 02:43:23 UTC
(In reply to David Edmundson from comment #4)
> My released flatpak still works as intended. 
> 
> Checking out xwaylandvideo bridge at the same commit as the released flatpak
> does not work.

Flatpak XWaylandBridge version worked in https://www.webrtc-experiment.com/Pluginfree-Screen-Sharing/#8149214815066223 but not worked with Discord Flatpak and Discord RPM

Fedora 38 with KDE 5.27.5, KF 5.107 and Qt 5.15.10
Comment 7 Andres 2023-06-19 22:21:03 UTC
*** Bug 471244 has been marked as a duplicate of this bug. ***
Comment 8 Andres 2023-06-19 22:27:12 UTC
how can I get the original working version? tried downloading from here https://invent.kde.org/davidedmundson/xwaylandvideobridge/-/jobs/853700/artifacts/browse  and it still doesn't work
Comment 9 tavaresgeorge 2023-06-23 00:08:08 UTC
https://invent.kde.org/system/xwaylandvideobridge/-/merge_requests/12

I removed a window hint and it starts to work again to me. I don't know if it affects anything more
Comment 10 David Edmundson 2023-06-27 19:39:00 UTC
Git commit b327a9b1759ff75beaf133dbb91d867e0dc37305 by David Edmundson, on behalf of George Tavares.
Committed on 27/06/2023 at 19:38.
Pushed by davidedmundson into branch 'master'.

fix: remove staysonbottomhint

Removing the Qt::WindowStaysOnBottomHint everything start to work to me again, Fedora 38 -> Gnome 44

M  +0    -1    src/contentswindow.cpp

https://invent.kde.org/system/xwaylandvideobridge/-/commit/b327a9b1759ff75beaf133dbb91d867e0dc37305
Comment 11 Jakub Kusal 2023-12-24 13:56:13 UTC
The same happens to me, on the latest Arch (24.12.2023)