fix: remove staysonbottomhint

Removing the Qt::WindowStaysOnBottomHint everything start to work to me again, Fedora 38 -> Gnome 44

BUG: 471140